<resources>
    <string name="toolbar_title">DHIS2</string>
    <string name="app_name">DHIS2 Dashboard (dev)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_dashboard_item_detail">DashboardItemDetailActivity</string>
    <string name="title_activity_interpretation_comments">InterpretationCommentsActivity</string>

    <string name="description">ImageView description</string>
    <string name="drawer_open">Open navigation menu</string>
    <string name="drawer_close">Close navigation menu</string>

    <!-- START LoginActivity resources -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_url">Enter server URL</string>
    <string name="log_in">Log in</string>
    <!-- END -->

    <!-- START ConfirmUserActivity resources -->
    <string name="delete_and_log_out">Delete and log out</string>
    <string name="re_log_in">Re-Log In</string>
    <!-- END -->

    <!-- START MenuActivity resources -->
    <string name="analytics_section">ANALYTICS</string>
    <string name="dashboard">Dashboard</string>
    <string name="interpretations">Interpretations</string>
    <string name="user_section">USER</string>
    <string name="my_account">Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="other">OTHER</string>
    <string name="about">About</string>
    <!-- END -->

    <!-- START Toast Messages -->
    <string name="no_network_connection">No network connection</string>
    <string name="bad_response">Bad server response</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="wrong_address">Wrong server address</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_confirm_user">ConfirmUserActivity</string>
    <!-- END -->

    <!-- START Actions -->
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="manage">Manage</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <!-- END -->

    <!-- START DashboardFragment -->
    <string name="add_dashboard">Add dashboard</string>
    <string name="add_dashboard_item">Add dashboard item</string>
    <string name="dashboard_name">Dashboard name</string>
    <string name="manage_dashboard">Manage dashboard</string>
    <string name="share_interpretation">Share interpretation</string>
    <string name="edit_name">Edit name</string>
    <string name="no_dashboards">No dashboards</string>
    <string name="enter_valid_name">Please, enter valid name</string>

    <string name="click_the_search_button">
        Click the search button to add a new dashboard item.
    </string>

    <string name="charts">Charts</string>
    <string name="event_charts">Event charts</string>
    <string name="maps">Maps</string>
    <string name="report_tables">Pivot Tables</string>
    <string name="event_reports">Event reports</string>
    <string name="users">Users</string>
    <string name="reports">Standard Reports</string>
    <string name="resources">Resources</string>
    <string name="messages">Messages. Unsupported Resource.</string>
    <string name="unsupported_dashboard_item_type">Unsupported dashboard item type.</string>
    <!-- END DashboardFragment -->

    <!-- START Interpretations -->
    <string name="add_comment">Add comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="edit_text">Edit text</string>
    <string name="interpretation_comment">Interpretation comment</string>
    <string name="interpretation_text">Interpretation text</string>
    <string name="create_interpretation">Create interpretation</string>
    <string name="no_interpretations">No interpretations</string>
    <string name="successfully_created_interpretation">Successfully created interpretation</string>
    <string name="unsupported_interpretation_type">Unsupported interpretation type.</string>
    <!-- END Interpretations -->


    <!-- START Account -->
    <string name="account">Account</string>

    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="introduction">Introduction</string>
    <string name="education">Education</string>
    <string name="employer">Employer</string>
    <string name="interests">Interests</string>
    <string name="job_title">Job title</string>
    <string name="languages">Languages</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>

    <!-- END Account -->

    <!-- last commit -->
    <string name="about_this_app">"About this app"</string>
    <string name="app_version">App version: %s</string>
    <string name="last_commit">"Commit hash: %s"</string>
    <string name="unavailable">"Unavailable"</string>
    <string name="lastcommit_unavailable"><![CDATA[
    <p>This option requires some changes in the git repository.</p>
    <p>Steps:</p>
    <p>1. Please open or create the .git/hooks/post-commit and .git/hooks/post-checkout files.</p>
    <p>2. If the file does not exist, add the following lines: </p>
    <p>#!/bin/sh </p>
    <p>gitPath=$(git rev-parse --show-toplevel)</p>
    <p>sh ${gitPath}/generate_last_commit.sh </p>
    <p>2. If the file already exists, you only need add the following lines at the end:</p>
    <p>gitPath=$(git rev-parse --show-toplevel)</p>
    <p>sh ${gitPath}/generate_last_commit.sh </p>
    <p>3. Run "git checkout". </p>]]>
    </string>


    <!-- Settings -->
    <string name="chart_preferences_title">"Images size"</string>
    <string name="width_title">"Width:"</string>
    <string name="height_title">"Height:"</string>
    <string name="invalid_value">The value is not valid, please enter a value between %1$d and %2$d</string>
    <string name="action_not_allowed_during_sync">"The App is synchronizing with the server, please try again after it's finished"</string>
    <string name="logged_in">"Logged in as: "</string>
    <string name="at_server">"At server: "</string>
    <string name="go_online_report_tables">"Please go online to see report tables"</string>
</resources>
