<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/type_charts"
            android:checked="true"
            android:orderInCategory="101"
            android:title="@string/charts"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_event_charts"
            android:checked="true"
            android:orderInCategory="110"
            android:title="@string/event_charts"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_maps"
            android:checked="true"
            android:orderInCategory="111"
            android:title="@string/maps"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_report_tables"
            android:checked="true"
            android:orderInCategory="201"
            android:title="@string/report_tables"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_event_reports"
            android:checked="true"
            android:orderInCategory="210"
            android:title="@string/event_reports"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_users"
            android:checked="true"
            android:orderInCategory="211"
            android:title="@string/users"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_reports"
            android:checked="true"
            android:orderInCategory="301"
            android:title="@string/reports"
            app:showAsAction="never"/>

        <item
            android:id="@+id/type_resources"
            android:checked="true"
            android:orderInCategory="310"
            android:title="@string/resources"
            app:showAsAction="never"/>
    </group>

</menu>