<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, University of Oslo
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~ Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~ Neither the name of the HISP project nor the names of its contributors may
  ~ be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard_item"
            android:checked="true"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/menu_interpretations_item"
            android:icon="@mipmap/ic_interpretations"
            android:title="@string/interpretations"/>
        <item
            android:id="@+id/menu_account_item"
            android:icon="@mipmap/ic_username"
            android:title="@string/my_account"/>
        <item
            android:id="@+id/menu_settings_item"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/menu_about_item"
            android:icon="@mipmap/ic_about"
            android:title="@string/about"/>
    </group>

</menu>
